--- a/app/src/main/res/layout/fragment_items.xml
+++ b/app/src/main/res/layout/fragment_items.xml
@@ -31,13 +31,13 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.15">
+        android:layout_height="wrap_content"
+        >
 
         <EditText
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="New Text"
+            android:hint="Item to bring"
             android:textSize="18dp"
             android:id="@+id/input_item"
             android:layout_marginLeft="10dp"
