--- a/app/src/main/res/layout/fragment_budget.xml
+++ b/app/src/main/res/layout/fragment_budget.xml
@@ -1,10 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mycompany.itineraryplanner2.BudgetFragment" >
+    tools:context="com.mycompany.itineraryplanner2.itineraryplanner.BudgetFragment">
 
     <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/view"
         android:layout_alignParentLeft="true"
@@ -16,41 +16,64 @@
         android:paddingTop="16dp"
         android:paddingRight="16dp">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
-        android:ems="10"
-        android:id="@+id/editText"
-        android:hint="Budget"
-        android:imeOptions="actionNext"
-        android:singleLine="true" />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            android:ems="10"
+            android:id="@+id/editText"
+            android:hint="Budget"
+            android:imeOptions="actionDone"
+            android:singleLine="true"
+            android:gravity="right" />
 
-        </android.support.design.widget.TextInputLayout>
+    </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="wrap_content"
+    <!--    <android.support.design.widget.TextInputLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/view2"
+            android:layout_below="@+id/view"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:paddingBottom="0dp"
+            android:paddingLeft="16dp"
+            android:paddingTop="16dp"
+            android:paddingRight="16dp"
+            android:singleLine="true">
+
+        <AutoCompleteTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText2"
+            android:layout_below="@+id/view"
+            android:layout_toEndOf="@+id/view2"
+            android:hint="Hotel location"
+            android:imeOptions="actionDone"
+            android:singleLine="true"
+            android:inputType="textCapWords" />
+        </android.support.design.widget.TextInputLayout>-->
+
+    <TextView
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/view2"
+        android:text="Hotel"
+        android:id="@+id/textView4"
         android:layout_below="@+id/view"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:paddingBottom="0dp"
         android:paddingLeft="16dp"
         android:paddingTop="16dp"
         android:paddingRight="16dp"
-        android:singleLine="true">
+        android:paddingBottom="8dp" />
 
-    <AutoCompleteTextView
-        android:layout_width="match_parent"
+    <Spinner
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText2"
-        android:layout_below="@+id/view"
-        android:layout_toEndOf="@+id/view2"
-        android:hint="Hotel location"
-        android:imeOptions="actionGo"
-        android:singleLine="true" />
-    </android.support.design.widget.TextInputLayout>
+        android:id="@+id/spinner"
+        android:layout_below="@+id/textView4"
+        android:layout_alignParentStart="true"
+        android:paddingRight="16dp"
+        android:paddingLeft="16dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -61,26 +84,26 @@
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:paddingTop="16dp"
-        android:layout_below="@+id/view2"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/spinner"
+        android:layout_alignParentLeft="true" />
 
     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:gravity="start"
         android:id="@+id/radioGroup"
         android:layout_alignParentStart="true"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:layout_below="@+id/textView"
-        android:layout_alignParentLeft="true"
-        android:checkedButton="@+id/radioButton" >
+        android:layout_alignParentLeft="true">
 
         <RadioButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Exact"
+            android:text="Approximate (Faster)"
             android:id="@+id/radioButton"
             android:checked="false"
             android:layout_weight="1" />
@@ -88,7 +111,7 @@
         <RadioButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Approximate"
+            android:text="Exact (Slower)"
             android:id="@+id/radioButton2"
             android:checked="false"
             android:layout_weight="1" />
