--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,18 +5,18 @@
         <item android:id="@+id/nav_home" android:icon="@drawable/ic_home_black_18dp"
             android:title="Home" />
         <item android:id="@+id/nav_plan" android:icon="@drawable/ic_today_black_18dp"
-            android:title="Plan" />
-        <item android:id="@+id/nav_find" android:icon="@drawable/ic_room_black_18dp"
-            android:title="Locate" />
+            android:title="Itineary Planner" />
+<!--        <item android:id="@+id/nav_find" android:icon="@drawable/ic_room_black_18dp"
+            android:title="Locate" />-->
         <item android:id="@+id/nav_item" android:icon="@drawable/ic_shopping_basket_black_24dp"
-            android:title="To Bring" />
+            android:title="Items To Bring" />
     </group>
 
     <item android:title="Communicate">
         <menu>
-            <item android:id="@+id/nav_share" android:icon="@drawable/ic_live_help_black_24dp"
+            <item android:id="@+id/nav_contacts" android:icon="@drawable/ic_live_help_black_24dp"
                 android:title="Useful Contacts" />
-            <item android:id="@+id/nav_send" android:icon="@drawable/ic_feedback_black_24dp"
+            <item android:id="@+id/nav_feedback" android:icon="@drawable/ic_feedback_black_24dp"
                 android:title="Feedback" />
         </menu>
     </item>
