--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,4 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="200" app:showAsAction="never" />
+    <item android:id="@+id/action_delete" android:icon="@drawable/ic_delete_variant" android:title="@string/action_delete"
+        android:orderInCategory="100" app:showAsAction="always" />
+    <item android:id="@+id/action_marker" android:icon="@drawable/ic_map_marker_circle" android:title="@string/action_marker"
+        android:orderInCategory="100" app:showAsAction="always" />
 </menu>
