--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,7 +3,7 @@
 
     <group android:checkableBehavior="single">
         <item android:id="@+id/nav_home" android:icon="@drawable/ic_home_black_18dp"
-            android:title="Home" />
+            android:title="Home" android:numericShortcut="5"/>
         <item android:id="@+id/nav_plan" android:icon="@drawable/ic_today_black_18dp"
             android:title="Itineary Planner" />
 <!--        <item android:id="@+id/nav_find" android:icon="@drawable/ic_room_black_18dp"
