--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -6,30 +6,29 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".FeedbackActivity">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="How do you feel about TravelApp?"
         android:id="@+id/textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
+        android:textSize="23dp"
         android:layout_alignParentTop="true"
-        android:textSize="23dp" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="37dp"
+        android:fontFamily="sans-serif-medium" />
 
     <ImageButton
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:id="@+id/btnHappy"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:padding="5dp"
-        android:layout_marginTop="20dp"
         android:src="@drawable/happy"
         android:scaleType="fitCenter"
-        android:onClick="HappyFunction"/>
+        android:onClick="HappyFunction"
+        android:background="@null"
+        android:layout_marginBottom="53dp"
+        android:layout_above="@+id/btnNeutral"
+        android:layout_centerHorizontal="true" />
 
     <ImageButton
         android:layout_width="100dp"
@@ -38,22 +37,22 @@
         android:padding="5dp"
         android:src="@drawable/neutral"
         android:scaleType="fitCenter"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:onClick="NeutralFunction"/>
+        android:onClick="NeutralFunction"
+        android:background="@null"
+        android:layout_marginBottom="113dp"
+        android:layout_alignParentBottom="true"
+        android:layout_toStartOf="@+id/btnHappy" />
 
     <ImageButton
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:id="@+id/btnNthappy"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:padding="5dp"
-        android:layout_marginTop="20dp"
         android:src="@drawable/nthappy"
         android:scaleType="fitCenter"
-        android:onClick="NthappyFunction"/>
+        android:onClick="NthappyFunction"
+        android:background="@null"
+        android:layout_below="@+id/btnHappy"
+        android:layout_toEndOf="@+id/btnHappy" />
 
 </RelativeLayout>
