--- a/app/src/main/res/layout/list_content.xml
+++ b/app/src/main/res/layout/list_content.xml
@@ -27,6 +27,7 @@
         android:gravity="center">
 
         <ProgressBar style="?android:attr/progressBarStyleLarge"
+            android:id="@+id/progressBar_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView android:layout_width="wrap_content"
@@ -45,12 +46,20 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:drawSelectorOnTop="false"
-            />
+            android:layout_marginBottom="60dp"/>
         <TextView android:id="@android:id/empty"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar"
+            android:layout_gravity="center"
+            android:indeterminateOnly="true"
+            android:visibility="gone" />
     </FrameLayout>
 
 </FrameLayout>
