--- a/app/src/main/res/layout/list_content.xml
+++ b/app/src/main/res/layout/list_content.xml
@@ -27,7 +27,6 @@
         android:gravity="center">
 
         <ProgressBar style="?android:attr/progressBarStyleLarge"
-            android:id="@+id/progressBar_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView android:layout_width="wrap_content"
@@ -56,7 +55,7 @@
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/progressBar"
+            android:id="@+id/itinerary_progressBar"
             android:layout_gravity="center"
             android:indeterminateOnly="true"
             android:visibility="gone" />
